--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Calculated Date</h1>
+    <h1>MK4 Upgrade Completion Checker</h1>
+    <p>If delivered today, your printer will be upgraded by...</p>
     <p id="date"></p>
   </div>
 
